...
        android:layout_height="wrap_content"
        android:text="Categories (comma separated)"
        android:fontFamily="@font/regular"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/categoriesInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:hint="Electronics, Books, Clothing"/>

...
        android:fontFamily="@font/regular"
        android:text="Locations/Distance (comma separated)"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/locationsInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:hint="Halifax, 10 km"/>

...
