<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="275dp"
            android:hint="Enter your registered email"
            android:fontFamily="@font/regular"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/submitEmailButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/regular"
            android:text="Submit" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>