<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center">

        <!-- New Password Field -->
        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter new password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:importantForAccessibility="yes"
            android:contentDescription="New Password Field"/>

        <!-- Confirm Password Field -->
        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm new password"
            android:inputType="textPassword"
            android:importantForAccessibility="yes"
            android:contentDescription="Confirm Password Field"
            android:layout_marginBottom="30dp"/>

        <!-- Submit Button -->
        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset Password"
            android:importantForAccessibility="yes"
            android:contentDescription="Reset Password Button"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>